--- a/app/src/main/res/layout/myplants_item_flower.xml
+++ b/app/src/main/res/layout/myplants_item_flower.xml
@@ -43,6 +43,7 @@
             app:backgroundTint="@color/bottom_appbar_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/delete_from_my_plants"
             app:icon="@drawable/delete"
             app:iconTint="@color/black"
             android:gravity="center"
@@ -57,7 +58,7 @@
             app:backgroundTint="@color/bottom_appbar_menu"
             app:icon="@drawable/heart_plus"
             app:iconTint="@color/black"
-
+            android:contentDescription="@string/updateButton"
             app:iconTintMode="multiply"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="@+id/flowerImageView"
