--- a/app/src/main/res/layout/activity_myplants_maps.xml
+++ b/app/src/main/res/layout/activity_myplants_maps.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent">
 
         <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/topAppBar"
+            android:id="@+id/topAppBarMaps"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -21,7 +21,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/primary_color"
-                app:navigationIcon="@drawable/ic_arrow_back"
+
+                app:menu="@menu/menu_main"
                 app:title="My Plants" />
 
         </com.google.android.material.appbar.AppBarLayout>
@@ -31,7 +32,7 @@
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/topAppBar" />
+            android:layout_below="@id/topAppBarMaps" />
     </RelativeLayout>
 
 
