--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,8 @@
     <color name="semiTransparentBlack">#4E000000</color>
     <color name="semiTransparentPri">#7EF0EDDD</color>
 
+    <color name="colorBlue">#0D47A1</color>
+    <color name="transColorBlue">#200D47A1</color>
 
 
 
