--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="#FFF3E0"
     tools:context=".ui.activity.DetailActivity">
 
 
@@ -76,7 +77,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFCF3"
+
         android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -197,7 +198,7 @@
             </LinearLayout>
 
             <!-- Map -->
-            <fragment
+            <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/mapFragment"
                 android:name="com.google.android.gms.maps.SupportMapFragment"
                 android:layout_width="match_parent"
@@ -246,15 +247,19 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/learnMoreButton"
-        style="@style/Widget.Material3.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center|bottom"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/bottom_appbar_menu"
+
         android:text="@string/my_plants"
-        android:textColor="@color/black"
-        app:showAsAction="always" />
+        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
+        android:textColor="@color/colorBlue"
+        app:showAsAction="always"
+        app:backgroundTint="@color/transColorBlue"
+        app:icon="@drawable/flowers"
+        app:iconPadding="6dp"
+        app:iconTint="@color/colorBlue"/>
 
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
