--- a/app/src/main/res/layout/myplants_item_flower.xml
+++ b/app/src/main/res/layout/myplants_item_flower.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="6dp"
+    android:layout_marginHorizontal="4dp"
 
 
     app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="255dp"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/flowerImageView"
@@ -19,34 +19,38 @@
             android:layout_height="220dp"
             android:contentDescription="@string/content_description_media"
             android:scaleType="centerCrop"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/flowerTypeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/title"
-            android:textColor="@color/black"
-            android:textAppearance="?attr/textAppearanceHeadline6"
-            android:background="@color/bottom_appbar_menu"
+            android:background="@color/semiTransparentPri"
             android:padding="8dp"
-            app:layout_constraintTop_toTopOf="@+id/flowerImageView"
-            app:layout_constraintStart_toStartOf="@+id/flowerImageView" />
-
+            android:text="@string/title"
+            android:textAppearance="?attr/textAppearanceHeadline6"
+            android:textColor="#170C4A"
+            app:layout_constraintStart_toStartOf="@+id/flowerImageView"
+            app:layout_constraintTop_toTopOf="@+id/flowerImageView" />
 
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/deleteButton"
             style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
-            app:backgroundTint="@color/bottom_appbar_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/delete_from_my_plants"
-            app:icon="@drawable/delete"
-            app:iconTint="@color/black"
             android:gravity="center"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
+            android:padding="5dp"
+            app:backgroundTint="@color/semiTransparentPri"
+            app:cornerRadius="0dp"
+            app:icon="@drawable/delete"
+            app:iconSize="18dp"
+            app:iconTint="#0D47A1"
             app:layout_constraintBottom_toBottomOf="@+id/flowerImageView"
             app:layout_constraintEnd_toEndOf="@+id/flowerImageView" />
 
@@ -55,12 +59,16 @@
             style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:backgroundTint="@color/bottom_appbar_menu"
-            app:icon="@drawable/heart_plus"
-            app:iconTint="@color/black"
             android:contentDescription="@string/updateButton"
-            app:iconTintMode="multiply"
             android:gravity="center"
+            android:insetLeft="0dp"
+            android:insetBottom="0dp"
+            android:padding="5dp"
+            app:backgroundTint="@color/semiTransparentPri"
+            app:cornerRadius="0dp"
+            app:icon="@drawable/heart_plus"
+            app:iconSize="18dp"
+            app:iconTint="#0D47A1"
             app:layout_constraintBottom_toBottomOf="@+id/flowerImageView"
             app:layout_constraintStart_toStartOf="@+id/flowerImageView" />
 
