--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -61,6 +61,7 @@
 
             </FrameLayout>
 
+
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/topAppBarDetail"
                 android:layout_width="match_parent"
@@ -71,6 +72,15 @@
                 app:menu="@menu/menu_main"
                 app:popupTheme="@style/Theme.FlowerTypes.PopupOverlay"
                 app:title="Details" />
+
+            <com.google.android.material.progressindicator.LinearProgressIndicator
+                android:id="@+id/progress_circular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                android:layout_gravity="bottom|center_horizontal"
+                app:indicatorColor="@color/colorBlue"
+                android:visibility="gone" />
 
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -281,6 +291,8 @@
 
         app:icon="@drawable/heart_plus"
         app:layout_anchor="@id/bottom_navigation" />
+
+
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
