--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,15 @@
             app:menu="@menu/menu_main"
             app:title="Snap History" />
 
+        <com.google.android.material.progressindicator.LinearProgressIndicator
+            android:id="@+id/progress_circular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:layout_gravity="top|center_horizontal"
+            app:indicatorColor="@color/colorBlue"
+            android:visibility="gone" />
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
@@ -150,6 +159,9 @@
             android:textColor="@color/black" />
 
     </LinearLayout>
+
+
+
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
