--- a/app/src/main/res/layout/activity_merged_flowers.xml
+++ b/app/src/main/res/layout/activity_merged_flowers.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/primary_color"
-
+            app:menu="@menu/menu_signout"
             app:title="Overview" />
 
         <com.google.android.material.progressindicator.LinearProgressIndicator
