--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -1,20 +1,30 @@
 <!-- Customize this layout according to your requirements -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/bottom_appbar_menu"
     android:gravity="center"
     tools:context=".ui.activity.LauncherActivity">
 
-    <!-- Add your desired views, such as logo, progress bar, or introductory information -->
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progress_circular"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        app:trackThickness="4dp"
+        app:indicatorSize="80dp"
+        app:trackColor="@color/bottom_appbar_menu"
+        android:indeterminate="true"
+        android:visibility="visible"
+        app:indicatorColor="@color/colorBlue" />
+
     <ImageView
-        android:id="@+id/launcher_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:src="@drawable/ic_launcher"
         android:contentDescription="@string/logo" />
 
-    <!-- Add any other views or layout elements as needed -->
-
-</RelativeLayout>
+</FrameLayout>
